1. add time used 2. update jdk parameter to speed up building